# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.430 2005/10/21 04:31:01 agaffney Exp $

*GLI-0.3 (17 Oct 2005)

  20 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  horrible tangled mess of code that is tarball unpacking subprogress display
  add unpack progress to portage snapshot
  use read() instead of readlines() in spawn()
  only update progress bar for whole percents

  19 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  change call to 'grub' to use GLIUtility.exitsuccess()
  add definition of 'build_mode' in _configure_lilo()
  src/misc/updategtkfe, src/misc/updateglid:
  fix so subshell is called in root shell

  18 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/handlers/WebGLIHandler.py:
  stage screen launches URI browser in sized window with various properties set

*GLI-0.2 (17 Oct 2005)

  17 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/misc/updategtkfe:
  updated to actually work
  remove previous snapshot and extracted dir before downloading
  src/misc/updateglid:
  updated to actually work
  src/templates/x86ArchitectureTemplate.py:
  fixed bug where grub code was looking for 'root+root+file_name2'

  16 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/handlers/WebGLIHandler.py:
  URI browser
  added mirror selection
  src/GLIUtility.py:
  ls via ssh strips off ending *

  16 Oct 2005; Preston Cody <codeman@gentoo.org>
  more updates to webgli.  stage selection.

  11 Oct 2005; Preston Cody <codeman@gentoo.org>
  updated webgli with preliminary Network Mounts support.
  
  9 Oct 2005; Preston Cody <codeman@gentoo.org>
  GenDialog: string formatting and yes/no label fixes.
  added WebGLI template for gliserv.py
  added WebGLIHandler as well as a definition for it in gliserv.py
  updates to the webgli files even though they won't be there for long.