@@ -485,9 +485,8 @@ Generate a dynamic stage3 on the fly using the files on the LiveCD? (faster for 
 			data += "REDIRECT OR POP UP THINGI"		
 		return self.wrap_in_webgli_template(data)
 
-	def configfiles(self):
+	def globaluse(self):
 		data = "<h2>Configuration Files Settings</h2><p>Make.conf Settings:</p>"
-		arch_procs = { 'x86': ("i386", "i486", "i586", "pentium", "pentium-mmx", "i686", "pentiumpro", "pentium2", "pentium3", "pentium3m", "pentium-m", "pentium4", "pentium4m", "prescott", "nocona", "k6", "k6-2", "k6-3", "athlon", "athlon-tbird", "athlon-4", "athlon-xp", "athlon-mp", "k8", "opteron", "athlon64", "athlon-fx", "winchip-c6", "winchip2", "c3", "c3-2") }
 		etc_files = self.shared_info.install_profile.get_etc_files()
 		if etc_files.has_key("make.conf"):
 			make_conf = etc_files['make.conf']
@@ -502,39 +501,87 @@ The result is a finely tuned OS with no unnecessary components to
 slow you down.
 The installer divides USE flag selection into two screens, one for
 global USE flags and one for local flags specific to each program.
-Please be patient while the screens load. It may take awhile."""
-		#First set the USE flags, this is a biggie.
+Please be patient while the screens load. It may take awhile.
+<form action="/webgli/saveglobaluse" method="POST" enctype="multipart/form-data">
+"""
+#First set the USE flags, this is a biggie.
 		if make_conf.has_key("USE"): 
 			system_use_flags = make_conf["USE"]
 		else:  #not a preloaded config.  this is the NORMAL case.
 			system_use_flags = GLIUtility.spawn("portageq envvar USE", return_output=True)[1].strip().split()
 		use_flags = []
-		use_local_flags = []
 		use_desc = GLIUtility.get_global_use_flags()
-		use_local_desc = GLIUtility.get_local_use_flags()
 		#populate the choices list
 		sorted_use = use_desc.keys()
 		sorted_use.sort()
 		#present the GLOBAL checkbox list
-		data += '<b>Global</b> USE Flags:<table width="100%"  border="1"><tr><th scope="col">Active</th><th scope="col">Flag</th><th scope="col">Description</th></tr>'+"\n"
+		data += '<h3>Global USE Flags:</h3><table width="100%"  border="1"><tr><th scope="col">Active</th><th scope="col">Flag</th><th scope="col">Description</th></tr>'+"\n"
 		for flagname in sorted_use:
 			data += '<tr><td><input name="flags" type="checkbox" id="flags" value="'+flagname+'" '
 			if flagname in system_use_flags:
 				data += "checked"
 			data += "></td><td>"+flagname+"</td><td>"+use_desc[flagname]+"</td></tr>\n"
-		data += "</table><br>\n"
-		
+		data += "</table><br>"
+		data += '<input name="saveglobaluse" type="submit" id="saveglobaluse" value="Save Local USE Settings">'
+		data += "</form>\n"
+		return self.wrap_in_webgli_template(data)
+	def saveglobaluse(self):
+		data = ""
+		return self.wrap_in_webgli_template(data)
+	def localuse(self):
+		data = "<h2>Configuration Files Settings</h2><p>Make.conf Settings:</p>"
+		etc_files = self.shared_info.install_profile.get_etc_files()
+		if etc_files.has_key("make.conf"):
+			make_conf = etc_files['make.conf']
+		else:
+			make_conf = {}
+		data += """The installer will now gather information regarding the contents of /etc/make.conf
+One of the unique (and best) features of Gentoo is the ability to
+define flags (called USE flags) that define what components are 
+compiled into applications.  For example, you can enable the alsa
+flag and programs that have alsa capability will use it.  
+The result is a finely tuned OS with no unnecessary components to
+slow you down.
+The installer divides USE flag selection into two screens, one for
+global USE flags and one for local flags specific to each program.
+Please be patient while the screens load. It may take awhile.
+<form action="/webgli/savelocaluse" method="POST" enctype="multipart/form-data">
+"""
+#First set the USE flags, this is a biggie.
+		if make_conf.has_key("USE"): 
+			system_use_flags = make_conf["USE"]
+		else:  #not a preloaded config.  this is the NORMAL case.
+			system_use_flags = GLIUtility.spawn("portageq envvar USE", return_output=True)[1].strip().split()
+		use_local_flags = []
+		use_local_desc = GLIUtility.get_local_use_flags()
 		#re-populate the chocies list
 		sorted_use = use_local_desc.keys()
 		sorted_use.sort()
 		#present the LOCALcheckbox list
-		data += '<b>Local</b> USE Flags:<table width="100%"  border="1"><tr><th scope="col">Active</th><th scope="col">Flag</th><th scope="col">Description</th></tr>'+"\n"
+		data += '<h3>Local USE Flags:</h3><table width="100%"  border="1"><tr><th scope="col">Active</th><th scope="col">Flag</th><th scope="col">Description</th></tr>'+"\n"
 		for flagname in sorted_use:
 			data += '<tr><td><input name="flags" type="checkbox" id="flags" value="'+flagname+'" '
 			if flagname in system_use_flags:
 				data += "checked"
 			data += "></td><td>"+flagname+"</td><td>"+use_local_desc[flagname]+"</td></tr>\n"
-		data += "</table><br>\n"
+		data += "</table><br>"
+		data += '<input name="savelocaluse" type="submit" id="savelocaluse" value="Save Local USE Settings">'
+		data += "</form>\n"
+		return self.wrap_in_webgli_template(data)
+	def savelocaluse(self):
+		data = ""
+		return self.wrap_in_webgli_template(data)
+	def configfiles(self):
+		data = "<h2>Configuration Files Settings</h2><p>Make.conf Settings:</p>"
+		data += '<form action="/webgli/saveconfigfiles" method="POST" enctype="multipart/form-data">'
+		arch_procs = { 'x86': ("i386", "i486", "i586", "pentium", "pentium-mmx", "i686", "pentiumpro", "pentium2", "pentium3", "pentium3m", "pentium-m", "pentium4", "pentium4m", "prescott", "nocona", "k6", "k6-2", "k6-3", "athlon", "athlon-tbird", "athlon-4", "athlon-xp", "athlon-mp", "k8", "opteron", "athlon64", "athlon-fx", "winchip-c6", "winchip2", "c3", "c3-2") }
+		etc_files = self.shared_info.install_profile.get_etc_files()
+		if etc_files.has_key("make.conf"):
+			make_conf = etc_files['make.conf']
+		else:
+			make_conf = {}
+		
+
 		data += '<h3>CFLAGS Settings: </h3>(only show these if not dynamic):<table width="100%"  border="1"><tr><td scope="col"><div align="left">Processor:<select name="proc" id="proc">'
 		procs = arch_procs[self.shared_info.client_profile.get_architecture_template()]
 		for proc in procs:
@@ -556,11 +603,10 @@ Please be patient while the screens load. It may take awhile."""
             </select> </td>
     </tr>
     <tr>
-      <td>Common CFLAGS: 
+      <td>Common CFLAGS:<br> 
         <input name="optim2" type="checkbox" id="optim2" value="-pipe">
--pipe
-<input name="optim2" type="checkbox" id="optim2" value="-fomit-frame-pointer">
--fomit-frame-pointer</td>
+-pipe<br>
+<input name="optim2" type="checkbox" id="optim2" value="-fomit-frame-pointer">-fomit-frame-pointer</td>
       <td>Additional CFLAGS:
       <input name="optim3" type="text" id="optim3" size="60"></td>
     </tr>
@@ -579,15 +625,15 @@ Please be patient while the screens load. It may take awhile."""
 			data += "<option value=\"alpha-unknown-linux-gnu\">alpha-unknown-linux-gnu</option>\n"
 		if self.shared_info.client_profile.get_architecture_template() == "ppc":
 			data += "<option value=\"powerpc-unknown-linux-gnu\">powerpc-unknown-linux-gnu</option>\n"		
-		#if self._client_profile.get_architecture_template() == "ppc64":
+		if self.shared_info.client_profile.get_architecture_template() == "ppc64":
 			data += "<option value=\"powerpc64-unknown-linux-gnu\">powerpc64-unknown-linux-gnu</option>\n"		
-		#if self._client_profile.get_architecture_template() in ["sparc", "sparc64"]:
+		if self.shared_info.client_profile.get_architecture_template() in ["sparc", "sparc64"]:
 			data += "<option value=\"sparc-unknown-linux-gnu\">sparc-unknown-linux-gnu</option>\n"		
-		#if self._client_profile.get_architecture_template() == "hppa":
+		if self.shared_info.client_profile.get_architecture_template() == "hppa":
 			data += "<option value=\"hppa-unknown-linux-gnu\">hppa-unknown-linux-gnu</option>\n"
 			data += "<option value=\"hppa1.1-unknown-linux-gnu\">hppa1.1-unknown-linux-gnu</option>\n"
 			data += "<option value=\"hppa2.0-unknown-linux-gnu\">hppa2.0-unknown-linux-gnu</option>\n"
-		#if self._client_profile.get_architecture_template() == "mips":
+		if self.shared_info.client_profile.get_architecture_template() == "mips":
 			data += "<option value=\"mips-unknown-linux-gnu\">mips-unknown-linux-gnu</option>\n"
 		data += """</select>
 <hr>
@@ -626,7 +672,42 @@ Please be patient while the screens load. It may take awhile."""
 		data = ""
 		return self.wrap_in_webgli_template(data)
 	def bootloader(self):
-		data = ""
+		arch = self.shared_info.client_profile.get_architecture_template()
+		arch_loaders = { 'x86': [
+				("grub",(u"GRand Unified Bootloader, newer, RECOMMENDED")),
+				("lilo",(u"LInux LOader, older, traditional.(detects windows partitions)"))],
+			'amd64': [
+				("grub",(u"GRand Unified Bootloader, newer, RECOMMENDED"))]} #FIXME ADD OTHER ARCHS
+		data = "<p>Bootloader Settings:</p>"
+		data += '<form name="Bloader" method="post" action="/webgli/savebootloader" enctype="multipart/form-data">'
+		data += """  <p>To boot successfully into your new Linux system, a bootloader will be needed. If you already have a bootloader you want to use you can select None here. The bootloader choices available are dependent on what GLI supports and what architecture your system is. Choose a bootloader:</p>
+	  <table width="100%"  border="1">"""
+		boot_loaders = arch_loaders[arch]
+		boot_loaders.append(("none", (u"Do not install a bootloader.  (System may be unbootable!)")))
+		for i,bloader in enumerate(boot_loaders):
+			data += '<tr><td><input name="bootloader" type="radio" value="'+boot_loaders[i][0]+'" >'+boot_loaders[i][0]+'</td><td>'+boot_loaders[i][1]+"</td></tr>\n"
+		data += """
+	  </table>
+	  <hr>
+	  Most bootloaders have the ability to install to either the Master Boot Record (MBR) or some other partition. Most people will want their bootloader installed on the MBR for successful boots, but if you have special circumstances, you can have the bootloader installed to the /boot partition instead. Do you want the boot loader installed in the MBR? (YES is RECOMMENDED)
+	  <p>"""
+		bootmbr = self.shared_info.install_profile.get_boot_loader_mbr()
+		data += '<input name="bootmbr" type="checkbox" id="bootmbr" value="True"'
+		if bootmbr:
+			data += " checked"
+		data += """>Install to MBR</p>
+		<p>If you have any additional optional arguments you want to pass to the kernel at boot, type them here: 
+		<input name="bootargs" type="text" id="bootargs" """
+		bootargs = self.shared_info.install_profile.get_bootloader_kernel_args()
+		if bootargs:
+			data += ' value="'+bootargs+'"'
+		data += """>
+	</p>
+	  <p>
+		<input name="setbootloader" type="submit" id="setbootloader" value="Save Bootloader Settings">
+	  </p>
+	</form>"""
+
 		return self.wrap_in_webgli_template(data)
 	def savebootloader(self):
 		data = ""
@@ -819,6 +900,10 @@ Please be patient while the screens load. It may take awhile."""
 				  '/webgli/Partitioning': self.partitioning,
 				  '/webgli/savepartitions': self.savepartitions,
 				  '/webgli/saveportage': self.saveportage,
+				  '/webgli/GlobalUSE': self.globaluse,
+				  '/webgli/saveglobaluse': self.saveglobaluse,
+				  '/webgli/LocalUSE': self.localuse,
+				  '/webgli/savelocaluse': self.savelocaluse,
 				  '/webgli/ConfigFiles': self.configfiles,
 				  '/webgli/saveconfigfiles': self.saveconfigfiles,
 				  '/webgli/Kernel': self.kernel,
