@@ -18,6 +18,8 @@
 			<p><a href="/webgli/NetworkMounts">Network Mounts</a></p>
 			<p><a href="/webgli/StageSelection">Stage Selection</a></p>
 			<p><a href="/webgli/PortageTree">Portage Tree</a></p>
+			<p><a href="/webgli/GlobalUSE">Global USE Flags</a></p>
+			<p><a href="/webgli/LocalUSE">Local USE Flags</a></p>
 			<p><a href="/webgli/ConfigFiles">Config Files</a></p>
 			<p><a href="/webgli/Kernel">Kernel</a></p>
 			<p><a href="/webgli/Bootloader">Bootloader</a></p>
