@@ -1,10 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.430 2005/10/21 04:31:01 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.431 2005/10/22 20:06:53 codeman Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
+  22 Oct 2005; Preston Cody <codeman@gentoo.org>
+  webgli initial bootloader support + changed make.conf.
+  
   20 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
   horrible tangled mess of code that is tarball unpacking subprogress display
